2006-06-25 Neil Williams  <linux@codehelp.co.uk>

	* qof/deprecated.c,
	qof/qofdate.c,
	qof/qofdate.h,
	qof/qofstrftime.c,
	qof/qoftime.c,
	qof/qoftime.h,
	qof/test/test-date.c : Rationalise addmonths
	and adddays and fix deprecated and test code.
	Simplify day_end, day_start and day_middle.
	Implement and test qof_date_from_qtime and
	qof_date_to_qtime. Add a few more tests - 1550.

2006-06-24 Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate-p.h,
	qof/qofdate.c,
	qof/qofdate.h,
	qof/qofstrptime.c,
	qof/test/test-date.c : Standardise yday and wday handling
	and add tests for yday and wday.

2006-06-22 Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c,
	qof/qofstrptime.c,
	qof/test/test-date.c : Implement more tests and
	allow partial testing of BC dates. BC dates are very 
	difficult to parse because a minus sign is also a valid 
	date separator. BC can be handled directly and printed, 
	some restrictions are inevitable to parse BC date strings.

2006-06-22 Neil Williams <linux@codehelp.co.uk>

	* qof/qofdate.c,
	qof/test/test-date.c : Fixing a few more tests.

2006-06-20 Neil Williams <linux@codehelp.co.uk>

	* qof/test/test-date.c : Comment out failing
	tests during further work on qoftime and qofdate.

2006-05-31 Neil Williams <linux@codehelp.co.uk>

	* configure.in,
	qof/Makefile.am,
	qof/deprecated.c,
	qof/qofdate.c,
	qof/qofdate.h,
	qof/qofstrftime.c,
	qof/qofstrftime.h,
	qof/qofstrptime.c,
	qof/qofstrptime.h,
	qof/qoftime.c,
	qof/qoftime.h,
	qof/test/Makefile.am,
	qof/test/test-date.c: Moving lib/libtime code
	into main library.

2006-05-31 Neil Williams <linux@codehelp.co.uk>

	* qof/deprecated.c,
	qof/deprecated.h : Fixing missing symbols.

2006-05-31 Neil Williams <linux@codehelp.co.uk>

	* lib/libtime/Makefile.am : New files added.
	* lib/libtime/qofgmtime.c : Ensure qof_date_from_qtime 
	returns a valid date, or NULL
	* lib/libtime/qofstrftime.c : Tweak.
	* lib/libtime/qofstrftime.h : Tweak.